--- a/src/component/Navigation/Navbar/Navbar.scss
+++ b/src/component/Navigation/Navbar/Navbar.scss
@@ -1,8 +1,7 @@
-.navbar-container{
-    width: 100%;
-    height: 66px;
-    padding: 0rem 1rem;
-    background-color: #363636;
-    display: flex;
-
+.navbar-container {
+  width: 100%;
+  height: 66px;
+  padding: 0rem 1rem;
+  background-color: #4d4d4d;
+  display: flex;
 }
